# Monitorsystem

./: .gitignore  AlarmManager.cpp  AlarmManager.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Mat2QImage.h  MotionDetector.cpp  MotionDetector.h  ObjectTracker.cpp  ObjectTracker.h  README.md  VideoCaptureModule.cpp  VideoCaptureModule.h  main.cpp
